<resources>
    <drawable name="cx1">#81217E</drawable>
    <drawable name="cx2">#81E217</drawable>

    <string name="app_name">氢游记</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="Remember_account">记住账号</string>
    <string name="Remember_passwd">记住密码</string>
    <string name="prompt_email">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_password_a">确认密码</string>
    <string name="prompt_passwords">设置找回密码功能问题!</string>
    <string name="prompt_passwordss">找回密码问题答案!</string>
    <string name="Registe_Order">昵称</string>
    <string name="action_sign_in">登录</string>
    <string name="action_sign_ins">确定注册</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">此电子邮件地址无效!</string>
    <string name="error_invalid_password">密码太短了!</string>
    <string name="error_incorrect_password">此密码不正确</string>
    <string name="error_field_required">账号不能为空!</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="Register">注册账号</string>
    <string name="Forget">忘记密码?</string>btn_ok
    <string name="btn_ok">注册账号</string>
</resources>
